aws/terraform_asg/alb.tf
# resource "aws_alb_target_group" "target-group" {
#   name = "alb-target-group"
#   port = 80
#   protocol = "HTTP"
# }
